# Emusync

./: .gitignore  CLAUDE.md  Makefile  README.md  build-appimage.sh  emusync  emusync-server.service  emusync.py  future prompts  install.sh  pyproject.toml  requirements.txt  test-sync.sh
.claude/: settings.json
.githooks/: pre-commit
backend/: build-backend.sh  cli.py  requirements-dev.txt  requirements.txt
cli/: __init__.py  common.py  console.py  consoles_data.py  detect.py  device.py  game.py  netrom.py  rom.py  root.py  run.py  run_conflicts.py  run_offline.py  run_ps2.py  run_reconcile.py  run_wii.py  server.py  sync.py  transfer.py  watch.py
docs/: ARCHITECTURE.md
gui/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.renderer.json  tsconfig.web.json
scripts/: scan-roms.mjs
server/: api.py  config.py  mdns.py  store.py  sync_client.py
tests/: conftest.py  test_auth.py  test_cli_console_import.py  test_cli_parity.py  test_config_roundtrip.py  test_conflicts.py  test_console_memcard.py  test_core_detection.py  test_defs_api.py  test_devices.py  test_events.py  test_game_remove.py  test_games.py  test_gc_card_format_mismatch.py  test_integration.py  test_integrity.py  test_locks.py  test_memcard_folder_sync.py  test_netrom.py  test_network_rom.py  test_new_consoles.py  test_parity_e2e.py  test_ps2_playtime.py  test_rom_import.py  test_rom_transfer.py  test_run_reconcile.py  test_save_watcher.py  test_saves.py  test_server_logging.py  test_server_settings.py  test_settings_api.py  test_smoke.py  (+5 more)
(+123 files in other folders)
