[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emusync"
version = "1.0.0"
description = "Save-file sync for emulators on a home LAN"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "tomlkit>=0.12.0",
    "zeroconf>=0.131.0",
    "pydantic>=2.0.0",
]

[project.scripts]
emusync = "emusync:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
